fixed spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,8 @@ a {
 
 .instructions {
 	width: 20%;
-	border: 1px solid black;
+	padding-left: 40px;
+/*	border: 1px solid black;*/
 }
 
 .instructions > ol {
@@ -69,4 +70,5 @@ td {
 
 h1 {
 	margin-bottom: 40px;
+	padding-left: 40px;
 }
